--- a/simple.ini
+++ b/simple.ini
@@ -12,7 +12,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ba
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
-ruleset=🚀 节点选择,[]FINAL
+ruleset=🚀 节点选择a,[]FINAL
 
 custom_proxy_group=🚀 节点选择a`select`[]♻️ 自动选择b`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择b`url-test`.*`http://www.gstatic.com/generate_204`300,,50
